# pipauto-rs

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  compose.browser.yaml  compose.ci.yaml  compose.recovery.yaml  compose.yaml  package-lock.json  package.json  playwright.config.ts  surrealkit.toml
.github/workflows/: ci.yaml
config/: development.yaml  test.yaml
database/: setup.surql
database/rollouts/: 20260719182632__initial_core_domain.toml  20260721104500__stored_attachment_schema.toml  20260721133849__mandatory_intervention_scheduling_snapshots.toml
database/seed/: seed.surql
database/snapshots/: catalog_snapshot.json  schema_snapshot.json
docs/: CONTEXT.md  api-v1.md  architecture.md  attachment-storage.md  authentication.md  calendar-drag-drop-options.md  calendar-ui-plan.md  database-operations.md  frontend.md  local-development.md  loco-model-repository-differences.md  migrations.md  rails-inspired-code-structure.md
docs/ui/: README.md  auth-shell-dashboard.md  calendar.md  customers-vehicles.md  design-system.md  interventions.md  invoices-payments.md  technical-knowledge.md
documentations/: CALENDAR_PRD.md  CONTEXT.md
milestone1/: GOAL.md
milestone2/: GOAL.md
milestone6/: GOAL.md
milestone7/: GOAL.md
milestones/: milestone-1.md  milestone-3.md  milestone-5.md  milestone-6.md  milestone-7.md
scripts/: attachment-volume-smoke  browser-smoke-server  ci-check  surrealkit
skills/coding-guidelines/: SKILL.md
skills/concurrency/: SKILL.md
skills/error-handling/: SKILL.md
skills/ownership/: SKILL.md
src/: app.rs  errors.rs  lib.rs  settings.rs  testing.rs
src/api/: errors.rs  ids.rs  mod.rs  money.rs  pagination.rs  quantity.rs  query.rs  responses.rs  timestamps.rs
src/auth/: cookies.rs  crypto.rs  csrf.rs  extractors.rs  mod.rs  responses.rs  settings.rs
src/controllers/: api_v1.rs  attachments.rs  auth.rs  customers.rs  dashboard.rs  interventions.rs  invoices.rs  mod.rs  setup.rs  surrealdb_health.rs  technical_notes.rs  vehicles.rs
src/database/: client.rs  migrations.rs  mod.rs  schema.rs  settings.rs  surreal_support.rs
src/domain/: archive.rs  id.rs  mod.rs  money.rs  normalization.rs  pagination.rs  quantity.rs  validation.rs  workshop_time.rs
src/initializers/: auth.rs  business.rs  mod.rs  surrealdb.rs  view_engine.rs
src/models/: attachment.rs  auth.rs  calendar.rs  context.rs  customer.rs  error.rs  intervention.rs  intervention_line.rs  invoice.rs  invoice_line.rs  mod.rs  payment.rs  persistence_error.rs  technical_note.rs  vehicle.rs
src/repositories/: attachment.rs  auth.rs  calendar.rs  customer.rs  health.rs  intervention.rs  mod.rs  (+3 more)
tests/: mod.rs
(+285 files in other folders)
