[workspace]

[package]
name = "pipauto"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "pipauto-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.16", default-features = false }

[dependencies]
loco-rs = { features = ["auth_jwt", "cli"], version = "0.16.4", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.45", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = { version = "1.11" }
tera = "2.0.0"
thiserror = "2.0.18"
surrealdb = { version = "3.2.1", default-features = false, features = ["protocol-ws", "kv-mem", "rustls"] }
axum-extra = { version = "0.10.3", features = ["cookie"] }
base64 = "0.22"
chrono = "0.4"
getrandom = "0.3"
hmac = "0.12"
rpassword = "7"
secrecy = "0.10"
sha2 = "0.10"
url = "2"
time = "0.3.53"
unicase = "2.9"

[[bin]]
name = "pipauto-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
surrealkit = "=0.7.0"
tower = "0.5"
serial_test = "3.1.1"
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }
